--- a/.travis.yml
+++ b/.travis.yml
@@ -5,14 +5,15 @@ branches:
     - gh-pages
 env:
   - TOX_ENV=py27
+matrix:
+  fast_finish: true
 before_install:
   - sudo apt-get -qq update
 install:
   - python -m pip install -U pip
   - pip install -U setuptools
-  - pip install tox
-  - pip install codecov
+  - pip install tox-travis codecov
 script:
-  - tox -e $TOX_ENV
+  - tox
 after_success:
   - codecov
