--- a/tox.ini
+++ b/tox.ini
@@ -1,12 +1,17 @@
 
 [tox]
-envlist = py{27,34,35,36}
+envlist = py{27,34,35,36}-pytest{3,4}
+
 
 [testenv]
 passenv = CI TRAVIS*
-commands = py.test --cov-report=term-missing --cov-report=xml --cov={envsitepackagesdir}/pytest_filedata
-deps = -r{toxinidir}/facsimile/requirements.txt
-       -r{toxinidir}/facsimile/requirements-test.txt
+deps =
+    pytest3: pytest>=3, <4
+    pytest4: pytest>=4, <5
+    -r{toxinidir}/facsimile/requirements.txt
+    -r{toxinidir}/facsimile/requirements-test.txt
+commands = pytest --cov-report=term-missing --cov-report=xml --cov={envsitepackagesdir}/pytest_filedata
+
 
 [pytest]
 norecursedirs = .facsimile data gen .tox
