--- a/tox.ini
+++ b/tox.ini
@@ -8,10 +8,10 @@ passenv = CI TRAVIS*
 deps =
     pytest3: pytest>=3, <4
     pytest4: pytest>=4, <5
-    -r{toxinidir}/facsimile/requirements.txt
-    -r{toxinidir}/facsimile/requirements-test.txt
+    -r{toxinidir}/Ctl/requirements.txt
+    -r{toxinidir}/Ctl/requirements-test.txt
 commands = pytest --cov-report=term-missing --cov-report=xml --cov={envsitepackagesdir}/pytest_filedata
 
 
 [pytest]
-norecursedirs = .facsimile data gen .tox
+norecursedirs = Ctl data gen .tox
