--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,12 +7,19 @@ authors = [ "20C <code@20c.com>",]
 readme = 'README.md'
 license = "LICENSE.txt"
 classifiers = [
-  "Topic :: Software Development", 
-  "License :: OSI Approved :: Apache Software License", 
+  "Development Status :: 4 - Beta",
+  "Framework :: Pytest",
+  "License :: OSI Approved :: Apache Software License",
+  "Programming Language :: Python :: 2",
+  "Programming Language :: Python :: 2.7",
+  "Programming Language :: Python :: 3",
+  "Programming Language :: Python :: 3.4",
+  "Programming Language :: Python :: 3.5",
   "Programming Language :: Python :: 3.6", 
   "Programming Language :: Python :: 3.7", 
   "Programming Language :: Python :: 3.8", 
   "Programming Language :: Python :: 3.9",
+  "Topic :: Software Development :: Testing",
 ]
 
 [tool.poetry.dependencies]
