--- a/tox.ini
+++ b/tox.ini
@@ -1,16 +1,20 @@
 
 [tox]
-envlist = py{27,34,35,36}-pytest{3,4}
+envlist = py{38,39,310,311,312}-pytest{6,7,8}
 
 
 [testenv]
-passenv = CI TRAVIS*
 deps =
     pytest3: pytest>=3, <4
     pytest4: pytest>=4, <5
+    pytest4: pytest>=5, <6
+    pytest4: pytest>=6, <7
+    pytest7: pytest>=7, <8
+    pytest8: pytest>=8, <9
     -r{toxinidir}/Ctl/requirements.txt
     -r{toxinidir}/Ctl/requirements-test.txt
-commands = pytest --cov-report=term-missing --cov-report=xml --cov={envsitepackagesdir}/pytest_filedata
+commands =
+    pytest -vs --cov={toxinidir}/pytest_filedata --cov-report=term-missing --cov-report=xml tests/
 
 
 [pytest]
