--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 
 [tox]
-envlist = py{27,34,35,36}-pytest{3,4}
+envlist = py{36,37,38,39}-pytest{3,4,5,6}
 
 
 [testenv]
@@ -8,6 +8,8 @@ passenv = CI TRAVIS*
 deps =
     pytest3: pytest>=3, <4
     pytest4: pytest>=4, <5
+    pytest5: pytest>=5, <6
+    pytest6: pytest>=6, <7
     -r{toxinidir}/Ctl/requirements.txt
     -r{toxinidir}/Ctl/requirements-test.txt
 commands = pytest --cov-report=term-missing --cov-report=xml --cov={envsitepackagesdir}/pytest_filedata
