--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,18 @@
 envlist = py{38,39,310,311,312}-pytest{6,7,8}
 
 
+[gh-actions]
+python =
+    3.8: py38
+    3.9: py39
+    3.10: py310
+    3.11: py311
+    3.12: py312
+
+
 [testenv]
+allowlist_externals =
+    pytest
 deps =
     pytest3: pytest>=3, <4
     pytest4: pytest>=4, <5
@@ -18,4 +29,4 @@ commands =
 
 
 [pytest]
-norecursedirs = Ctl data gen .tox
+norecursedirs = data gen .tox .venv
