--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,61 +1,57 @@
 [tool.poetry]
-name = "pytest_filedata"
-repository = "git@github.com:20c/pytest-filedata.git"
+name = "pytest-filedata"
 version = "0.4.0"
-description = "easily load data from files"
-authors = [ "20C <code@20c.com>",]
+description = "easily load test data from files"
 readme = 'README.md'
-license = "LICENSE.txt"
+repository = "https://github.com/20c/pytest-filedata"
+authors = [ "20C <code@20c.com>",]
+license = "Apache-2.0"
+
 classifiers = [
-  "Development Status :: 4 - Beta",
+  "Development Status :: 5 - Production/Stable",
   "Framework :: Pytest",
   "License :: OSI Approved :: Apache Software License",
-  "Programming Language :: Python :: 3.6", 
-  "Programming Language :: Python :: 3.7", 
-  "Programming Language :: Python :: 3.8", 
+  "Programming Language :: Python :: 3.8",
   "Programming Language :: Python :: 3.9",
+  "Programming Language :: Python :: 3.10",
+  "Programming Language :: Python :: 3.11",
+  "Programming Language :: Python :: 3.12",
   "Topic :: Software Development :: Testing",
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.6.1,<4.0"
-pre-commit = "^2.13.0"
+python = ">=3.8,<4.0"
+decorator = ">=4"
+requests-mock = ">=1"
 
 [tool.poetry.dev-dependencies]
-# test
-pytest = ">=6.0.1"
-pytest-django = ">=3.8.0"
-pytest-cov = "*"
-pytest-pythonpath = "*"
+# Package docutils (0.21.post1) not found.
+docutils = "<=0.21"
 
-# lint
-bandit = "^1.6.2"
-black = "^20.8b1"
-isort = "^5.7.0"
-flake8 = "^3.8.4"
+# tests
+coverage = ">=5.3"
+pytest = ">=6.1.2"
+pytest-cov = ">=2.10.1"
+tox = ">=4"
+tox-gh-actions = ">2"
 
-# docs
-markdown = "*"
-markdown-include = ">=0.5,<1"
-mkdocs = ">=1.0.0,<2.0.0"
+# linting
+ruff = ">=0.1"
+mypy = ">=0.950"
+pre-commit = ">=2.13"
+pyupgrade = ">=2.19"
 
 # ctl
-ctl = "^1.0.0"
-jinja2 = "^2.11.2"
-tmpl = "^0.3.0"
+ctl = ">=1"
+jinja2 = ">=3"
+tmpl = ">=1"
+twine = ">=3.3.0"
 
-decorator = ">=4, <5"
-future = ">=0.16.0, <1"
-requests-mock = ">=1, <2"
-
-
-[tool.poetry.plugins."markdown.extensions"]
-pymdgen = "pymdgen.md:Extension"
+# docs
+markdown-include = ">=0.5,<1"
+mkdocs = ">=1.2.3"
+pymdgen = ">=1"
 
 [build-system]
-requires = [ "poetry>=0.12",]
-build-backend = "poetry.masonry.api"
-
-[tool.isort]
-profile = "black"
-multi_line_output = 3
+requires = ["poetry-core>=1"]
+build-backend = "poetry.core.masonry.api"
