--- a/tox.ini
+++ b/tox.ini
@@ -1,19 +1,32 @@
 
 [tox]
-envlist = py{36,37,38,39}-pytest{3,4,5,6}
+envlist = py{38,39,310,311,312}-pytest{6,7,8}
+
+
+[gh-actions]
+python =
+    3.8: py38
+    3.9: py39
+    3.10: py310
+    3.11: py311
+    3.12: py312
 
 
 [testenv]
-passenv = CI TRAVIS*
+allowlist_externals =
+    pytest
 deps =
     pytest3: pytest>=3, <4
     pytest4: pytest>=4, <5
     pytest5: pytest>=5, <6
     pytest6: pytest>=6, <7
+    pytest7: pytest>=7, <8
+    pytest8: pytest>=8, <9
     -r{toxinidir}/Ctl/requirements.txt
     -r{toxinidir}/Ctl/requirements-test.txt
-commands = pytest --cov-report=term-missing --cov-report=xml --cov={envsitepackagesdir}/pytest_filedata
+commands =
+    pytest -vs --cov={toxinidir}/pytest_filedata --cov-report=term-missing --cov-report=xml tests/
 
 
 [pytest]
-norecursedirs = Ctl data gen .tox
+norecursedirs = data gen .tox .venv
